--- a/ChatBotMVP/package.json
+++ b/ChatBotMVP/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "chat-bot-mvp",
   "version": "0.0.0",
   "description": "ChatBotMVP",
@@ -10,5 +10,12 @@
   },
   "author": {
     "name": "DiegoFerreiraLamarão"
+  },
+  "dependencies": {
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "request": "^2.83.0",
+    "require": "^2.4.20"
   }
 }
